# gemma-enhanced

./: .clang-format  .gitignore  CMakeLists.txt  CODE_REVIEW_FIXES_SUMMARY.md  CRITICAL_FIXES_COMPLETED.md  PHASE4_COMPLETE.md  PHASE5_ASSESSMENT_REPORT.md  SECURITY_AUDIT_REPORT.md  SECURITY_FIX_SUMMARY.md  VALIDATION_REPORT.md  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: bazel-ci.yml  ci-build.yml  clang-tidy.yml  codeql-analysis.yml  lint-format.yml  tests.yml
cmake/: DependencySummary.cmake  EnvValidation.cmake  FindIntelSYCL.cmake
config/prompts/: GEMMA.md  coding.md  concise.md  creative.md  default.md  technical.md
docs/: BUILDING.md  Doxyfile.in  ENV_PATH_HINTS.md
gemma.cpp/: CMakeLists.txt
scripts/: setup_env_linux.sh  setup_env_windows.ps1
src/gemma_cli/: __init__.py  cli.py
src/gemma_cli/commands/: README.md  __init__.py  model.py  rag_commands.py  setup.py
src/gemma_cli/config/: models.py  prompts.py  settings.py  settings_secure.py
src/gemma_cli/core/: __init__.py  conversation.py  enums.py  gemma.py
src/gemma_cli/deployment/: build_script.py  uvx_wrapper.py
src/gemma_cli/mcp/: INTEGRATION_GUIDE.md  README.md  __init__.py  client.py  config_loader.py  example_usage.py
src/gemma_cli/onboarding/: __init__.py  checks.py  templates.py  tutorial.py  wizard.py
src/gemma_cli/rag/: README.md  __init__.py  embedded_vector_store.py  hybrid_rag.py  memory.py  optimizations.py  python_backend.py
src/gemma_cli/ui/: __init__.py  components.py  console.py  formatters.py  theme.py  widgets.py
tests/: CMakeLists.txt  conftest.py
tests/integration/: CMakeLists.txt  mock_system.h  test_backend_switching_workflow.cpp  test_batch_processing_workflow.cpp  test_configuration_update_workflow.cpp  test_end_to_end.cpp  test_error_recovery_workflow.cpp  test_mcp_server_workflow.cpp  test_model_inference_workflow.cpp  test_performance_stress_workflow.cpp  test_session_workflow.cpp  test_system_lifecycle.cpp  test_system_metrics_workflow.cpp
tests/mcp/: test_mcp_validation.cpp
tests/performance/: CMakeLists.txt  test_stress_concurrent_generations.cpp
tests/security/: test_path_validation.py
tests/unit/: test_gemma_interface.py
tests/utils/: fixtures.py  system_config_builder.h  test_helpers.py
tools/: PrintLabels.cmake
